# delivery

./: pyproject.toml
delivery/: .gitignore
