[[tool.poetry.source]]
name = "raif"
url = "https://artifactory.raiffeisen.ru/artifactory/api/pypi/remote-pypi/simple"
priority = "primary"

[project]
name = "delivery"
version = "0.1.0"
description = ""
authors = [
    {name = "Vitaly Maznykh",email = "vitaly.maznykh@raiffeisen.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "niquests (>=3.15.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
